# devgraph-rl

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DECISIONS.md  USER_GUIDE.md
notebooks/: train_colab.ipynb
src/agents/: __init__.py  base_agent.py  coding.py  planner.py
src/graphs/: __init__.py  ast_graph.py  call_graph.py  dependency_graph.py
src/llm/: __init__.py  router.py
src/memory/: __init__.py  embedder.py  memory_manager.py  vector_store.py
src/rewards/: __init__.py  code_quality.py  reward_model.py  reward_store.py
src/sandbox/: __init__.py  executor.py  sandbox.py  test_runner.py  validator.py
src/training/: __init__.py  data_collector.py  dataset_builder.py  keras_experiments.py  sklearn_analyzer.py  torch_trainer.py  trainer.py
tests/: test_agents.py  test_assistant_engine.py  test_assistant_router.py  test_data_collector.py  test_dataset_builder.py  test_graphs.py  test_keras_experiments.py  test_memory.py  test_rewards.py  test_router.py  test_sandbox.py  test_sklearn_analyzer.py  test_torch_trainer.py  test_trainer.py
visualiser/: main.py  requirements.txt
visualiser/routers/: assistant.py  graphs.py  memory.py  repo.py  rewards.py  sandbox.py  training.py
visualiser/samples/cpp/: calculator.h  main.cpp  shape.h  shapes.cpp  shapes.h  utils.cpp  utils.h
visualiser/samples/javascript/: base.js  calculator.js  main.js  shapes.js  utils.js
visualiser/services/: assistant_engine.py  graph_builder.py  query_engine.py  repo_manager.py
visualiser/static/: index.html  index.html.bak
(+10 files in other folders)
