[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devgraph-rl"
version = "0.1.0"
description = "Graph-Augmented RLHF Multi-Agent Autonomous Software Engineering System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "groq>=0.9.0",
    "google-generativeai>=0.5.0",
    "langgraph>=0.1.0",
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "networkx>=3.3",
    "tree-sitter>=0.21.3",
    "pydriller>=2.6",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "docker>=7.1.0",
    "gitpython>=3.1.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
graphs = [
    "tree-sitter==0.21.3",
    "tree-sitter-languages>=1.10.2",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]
training = [
    "torch>=2.3.0",
    "transformers>=4.41.0",
    "trl>=0.9.0",
    "peft>=0.11.0",
    "datasets>=2.20.0",
    "wandb>=0.17.0",
]

[project.scripts]
devgraph = "src.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]